# raytrace

./: .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  config_reader.cpp  config_reader.h  const.h  frame_buffer.cpp  frame_buffer.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mtl.cpp  mtl.h  object.cpp  object.h  scene.cpp  scene.h  scene1.json  scene2.json  sphere.cpp  sphere.h  svpng.inc  texture.cpp  texture.h  triangle.cpp  triangle.h  vector3.cpp  vector3.h  vector3_sse.h  vector3_sse64.h
